@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2008.November.7 (0.9.21)
+2008.December.1 (0.9.21)
   * New Starters:
     -------------
     * Silver Frame
@@ -87,6 +87,9 @@ $Id$
     -------------------
     * Starter images no longer need to be created with alpha transparency.
       Any solid white will be removed automatically by Tux Paint.
+
+    * White always appears as the first color in the "New" dialog,
+      regardless of its position (or even existence) in the color palette.
 
   * New localizations:
     ------------------
